--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "angularfire": "^2.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "compat": "^1.0.4",
-    "firebase": "^10.10.0",
+    "firebase": "^9.23.0",
+    "ngx-pagination": "^6.0.3",
+    "rxfire": "^6.0.5",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
@@ -33,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.1.2",
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
